
- rename Changes-ToDo -> NEWS to make R CMD check happy
- move combinat from Suggests to Imports
- remove require calls for MASS

==== release: 0.6-11

- GermanCredit data copied vom evtree package which has been archived
- depends on R >= 2.10.0

==== release: 0.6-12

- new function cond.index for the "Calculation of Condition Indices for Linear Regression"
- bugfix for NaiveBayes: predict would not work for one explan. variable

==== release: 0.6-13

- woe: speedup and extension for weighted observation (imports wtd.table from questionr)   
- kmodes: bugfix (wrong calculation for weights) speedup (additional fast = TRUE argument) [note: works on data frames instead of matrices (cf. ln. 3/83) and characters instead of integers (cf. ln. 42/43)] 
- corclust: extension to categorical variables (using Cramer's V); returned object now of class corclust; plot.corclust() added; cvtree() function [cutree() for variables] added that also returns within vs. between cluster correlations; additional functions cvtree() and xtractvars()   
- NaiveBayes update for new versions of R
- predict.NaiveBayes gains support for logical explanatory variables thanks to Vincent R. Nijs


To Do (at least in Uwe's opinion):
======

1. disco must go into klaR and to CRAN!
   (e.g. for partimat)

stepclass:
- LATER: many rather long functions defined in stepclass()
  should be defined in the top level of the package
  (e.g. documenting them as "internal")
- LATER: Rewrite it to be readable.
- allow for *arbitrary* performance measures
- allow for arbitrary predict functions

rda:
- In Main Procedure some loops within loops within ... with
  really bad memory allocatoion as in: new <- c(new, ......)
  e.g. lines 383 ff., the same with calls to cbind()
- LATER: rda.default() - Many functions defined therein rather
  than in the package itself. Why?
- LATER: another optimizer, e.g. optim()?

quadplot:
- rgl implementation

triplot/quadplot:
- check whether membership values are in [0,1]